--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,6 +9,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "react-hot-toast": "^2.6.0"
   }
 }
